# ray_tracing_in_one_weekend

./: README.md  dune-project  flake.nix  image.ppm  ray_tracing.opam
src/: camera.ml  color.ml  dune  hit.ml  main.ml  material.ml  point3.ml  ray.ml  sphere.ml  vec3.ml
